# RustSwiftJSONParse

./: README.md
ios/RustSwiftJSONParse/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
ios/RustSwiftJSONParse.xcodeproj/: project.pbxproj
ios/RustSwiftJSONParse.xcodeproj/xcshareddata/xcbaselines/FF399F1F2AF67C1C00018965.xcbaseline/: 1A39D84D-F1AE-4671-893C-C7BA38EFE4A4.plist  Info.plist
ios/RustSwiftJSONParse.xcodeproj/xcshareddata/xcschemes/: RustSwiftJSONParse.xcscheme
ios/RustSwiftJSONParse/JSON/: BigJSON.swift  SimpleStatusJSON.swift
ios/RustSwiftJSONParse/Protos/: big_json.pb.swift  simple_status.pb.swift
ios/RustSwiftJSONParseTests/: RustSwiftJSONParseTests.swift
ios/scripts/: build_protos.sh  build_rust_engine.sh
rustengine/: Cargo.toml  build.rs
rustengine/header/: rust_engine_header.h
rustengine/scripts/: build.sh
rustengine/src/: big_json.rs  lib.rs  simple_status_json.rs
rustengine/src/protos/: big_json.proto  simple_status.proto
