[package]
name = "rustengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.149"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
protobuf = "3.3.0"

[build-dependencies]
protobuf-codegen = "3.3.0"
protoc-rust = "2.28.0"
